# rf_robot_v2

./: .clangd  .gitignore  .gitmodules  README.md  THIRD_PARTY.md
idl/rf_robot_msgs/: CMakeLists.txt  package.xml
idl/rf_robot_msgs/action/: ComputePathToPose.action  ExploreMap.action  FollowPath.action
idl/rf_robot_msgs/msg/: Costmap.msg  CostmapMetaData.msg  LandmarkList.msg  SubmapEntry.msg  SubmapList.msg
idl/rf_robot_msgs/srv/: Add.srv  DumpMap.srv  GetMap.srv  ReqAck.srv
src/elog/: CMakeLists.txt  package.xml
src/elog/include/elog/: logger_factory.h
src/rf_costmap/: CMakeLists.txt  package.xml
src/rf_costmap/include/rf_costmap/: cost_values.hpp  costmap_2d.hpp  costmap_config.hpp  costmap_interface.hpp  costmap_layer.hpp  costmap_publisher.hpp  inflation_layer.hpp  layer.hpp  master_costmap.hpp  observation.hpp  observation_buffer.hpp  obstacle_layer.hpp  static_layer.hpp
src/rf_costmap/src/: costmap_2d.cc  costmap_interface.cc  costmap_layer.cc  costmap_publisher.cc  inflation_layer.cc  layer.cc  master_costmap.cc  observation_buffer.cc  obstacle_layer.cc  static_layer.cc
src/rf_costmap/test/: CMakeLists.txt  test_costmap.cc
src/rf_example_node/: CMakeLists.txt  package.xml
src/rf_example_node/src/: main.cc
src/rf_global_map/: CMakeLists.txt  package.xml
src/rf_global_map/include/rf_global_map/: global_map_node.hpp
src/rf_global_map/src/: global_map_node.cc
src/rf_global_planner/: CMakeLists.txt  package.xml
src/rf_global_planner/include/rf_global_planner/: common.hpp  global_planner_node.hpp
src/rf_global_planner/include/rf_global_planner/planner/: astar_planner.hpp  default_planner.hpp  global_planner.hpp
src/rf_global_planner/src/: global_planner_node.cc
src/rf_global_planner/src/planner/: astar_planner.cc  default_planner.cc
src/rf_local_map/: CMakeLists.txt  package.xml
src/rf_local_map/include/rf_local_map/: local_map_node.hpp
src/rf_local_map/src/: local_map_node.cc
src/rf_local_planner/: CMakeLists.txt  package.xml
src/rf_local_planner/include/rf_local_planner/: common.hpp  local_planner_node.hpp
src/rf_local_planner/src/: local_planner_node.cc
src/rf_localization/: CMakeLists.txt  package.xml
src/rf_localization/include/rf_localization/: common.hpp  icp_localizer.hpp  localization_method.hpp  localization_node.hpp
src/rf_localization/src/: icp_localizer.cc  localization_node.cc
src/rf_main/: CMakeLists.txt  package.xml
src/rf_main/src/: main.cc
src/rf_map_builder/: CMakeLists.txt  package.xml
src/rf_map_builder/config/: default_map_builder_cfg.lua  pose_graph.lua
src/rf_map_builder/include/rf_map_builder/: config_options.hpp  map_builder_bridge.hpp  map_builder_node.hpp  msg_conversion.hpp  sensor_bridge.hpp  tf_bridge.hpp
src/rf_map_builder/src/: config_options.cc  map_builder_bridge.cc  map_builder_node.cc  msg_conversion.cc  sensor_bridge.cc
src/rf_map_manager/: CMakeLists.txt  package.xml
src/rf_map_manager/include/rf_map_manager/: common.hpp  map_manager.hpp  map_manager_node.hpp
src/rf_map_manager/src/: map_manager.cc  map_manager_node.cc
src/rf_map_manager/test/: CMakeLists.txt  test_map_manager_node.cc
src/rf_scheduler_node/: CMakeLists.txt  package.xml
src/rf_scheduler_node/include/rf_scheduler_node/: scheduler_node.hpp
src/rf_scheduler_node/src/: scheduler_node.cc  scheduler_node_exploration.cc  scheduler_node_frontier.cc  scheduler_node_internal.hpp  scheduler_node_mapping_job.cc  scheduler_node_navigation.cc
src/rf_util/: CMakeLists.txt  package.xml
src/rf_util/include/rf_util/: execution_timer.hpp  robot_utils.hpp  simple_action_server.hpp
src/rf_util/src/: robot_utils.cc
src/robot_model/: CMakeLists.txt  package.xml
src/robot_model/config/: ros_gz_bridge.yaml
src/robot_model/launch/: gazebo.launch.py
src/robot_model/urdf/: fishbot_gazebo.urdf
src/robot_model/world/: fish.world  fish_complex.world
