<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rf_map_builder</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fanxiaodong@buaa.edu.cn">royfan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>rf_robot_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>eigen</depend>
  <depend>elog</depend>
  <depend>rf_util</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>PCL</depend>
  <depend>pcl_conversions</depend>
  <depend>cartographer</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
